# haskell-nix-template

./: Makefile  flake.nix  shell.nix
.github/workflows/: ci.yaml
src/: foryou.cabal
src/tests/: TestSpec.hs
