cabal-version: 3.4
name:          foryou
version:       0.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

executable foryou
  import:           warnings
  main-is:          Main.hs
  build-depends:    base ^>=4.20.0.0
  hs-source-dirs:   app
  default-language: GHC2024

test-suite tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   tests
  build-depends:
    , base   ^>=4.20.0.0
    , hspec

  default-language: GHC2024
  other-modules:    TestSpec
